<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_message">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="letter_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="letter_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="my_email">vadshustow@yandex.ru</string>
    <string name="url_user_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="search_history">Вы искали</string>
    <string name="player_title_description_duration">Длительность</string>
    <string name="player_title_description_album">Альбом</string>
    <string name="player_title_description_year">Год</string>
    <string name="player_title_description_genre">Жанр</string>
    <string name="player_title_description_country">Страна</string>
    <string name="player_timer_placeholder">00:00</string>
    <string name="library_tab_favorite_tracks">Избранные треки</string>
    <string name="library_tab_playlists">Плейлисты</string>
    <string name="library_empty_favorite_tracks_placeholder">Ваша медиатека пуста</string>
    <string name="library_empty_playlists_placeholder">Вы не создали ни одного плейлиста</string>
    <string name="library_new_playlist_button">Новый плейлист</string>
    <string name="def_progress_time">00:00</string>
    <string name="create_playlist_title">Новый плейлист</string>
    <string name="create_playlist_hint_title">Название*</string>
    <string name="create_playlist_hint_description">Описание</string>
    <string name="create_playlist_button">Создать</string>
    <string name="create_playlist_alert_dialog_title">Завершить создание плейлиста?</string>
    <string name="create_playlist_alert_dialog_message">Все несохранённые данные будут потеряны</string>
    <string name="create_playlist_alert_dialog_negative_button">Отмена</string>
    <string name="create_playlist_alert_dialog_positive_button">Завершить</string>
    <string name="edit_playlist_title">Редактировать</string>
    <string name="save_button">Сохранить</string>
    <string name="info_playlist_no_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="info_playlist_delete_track">Хотите удалить трек?</string>
    <string name="info_playlist_delete_playlist">Хотите удалить плейлист</string>
    <string name="info_playlist_bottom_sheet_tracks">Плейлист пуст</string>


</resources>