<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_blue"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        app:titleTextAppearance="@style/TitleText" />

    <Button
        android:id="@+id/search_button"
        style="@style/MainButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_btn_height"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="@dimen/main_btn_margin_horizontal"
        android:layout_weight="1"
        android:text="@string/search"
        app:icon="@drawable/ic_search"
        app:iconPadding="@dimen/main_icon_padding" />

    <Button
        android:id="@+id/media_library_button"
        style="@style/MainButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_btn_height"
        android:layout_marginTop="@dimen/main_btn_margin_top"
        android:layout_marginHorizontal="@dimen/main_btn_margin_horizontal"
        android:layout_weight="1"
        android:text="@string/media_library"
        app:icon="@drawable/ic_library"
        app:iconPadding="@dimen/main_icon_padding" />

    <Button
        android:id="@+id/settings_button"
        style="@style/MainButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_btn_height"
        android:layout_marginTop="@dimen/main_btn_margin_top"
        android:layout_marginHorizontal="@dimen/main_btn_margin_horizontal"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings"
        app:iconPadding="@dimen/main_icon_padding" />


</LinearLayout>