<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@color/settings_background"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/settings_arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/settings_arrow_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/ys_display_medium_regular"
            android:text="@string/settings"
            android:textColor="@color/settings_title"
            android:textSize="@dimen/main_text_size" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginVertical="@dimen/settings_margin_vertical"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/dark_theme"
            android:textSize="@dimen/settings_text_size"
            android:textColor="@color/settings_text" />

        <Switch
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:layout_gravity="end|center"
            android:thumbTint="@color/theme_switch_thumb"
            android:trackTint="@color/theme_switch_track"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginVertical="@dimen/settings_margin_vertical"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/share_app"
            android:textSize="@dimen/settings_text_size"
            android:textColor="@color/settings_text" />

        <ImageView
            android:layout_width="@dimen/settings_icon"
            android:layout_height="@dimen/settings_icon"
            android:layout_gravity="end|center"
            android:src="@drawable/ic_share"
            app:tint="@color/settings_icon"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginVertical="@dimen/settings_margin_vertical"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/write_to_support"
            android:textSize="@dimen/settings_text_size"
            android:textColor="@color/settings_text" />

        <ImageView
            android:layout_width="@dimen/settings_icon"
            android:layout_height="@dimen/settings_icon"
            android:layout_gravity="end|center"
            android:src="@drawable/ic_support"
            app:tint="@color/settings_icon" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginVertical="@dimen/settings_margin_vertical"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/user_agreement"
            android:textSize="@dimen/settings_text_size"
            android:textColor="@color/settings_text" />

        <ImageView
            android:layout_width="@dimen/settings_icon"
            android:layout_height="@dimen/settings_icon"
            android:layout_gravity="end|center"
            android:src="@drawable/ic_arrow_forward"
            app:tint="@color/settings_icon" />

    </FrameLayout>

</LinearLayout>