<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/create_playlist_background"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/createPlaylistToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="@color/toolbar_arrow_back"
        app:title="@string/create_playlist_title"
        app:titleTextAppearance="@style/TitleText" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cvPlaylist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="26dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@id/namePlaylistLayout"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/rightGuideLine"
        app:layout_constraintStart_toStartOf="@id/leftGuideLine"
        app:layout_constraintTop_toBottomOf="@+id/createPlaylistToolbar">

        <ImageView
            android:id="@+id/imagePlaylist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/playlist_image"
            android:scaleType="centerCrop"
            android:background="@color/playlist_placeholder"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/namePlaylistLayout"
        style="@style/CreatePlaylistTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/create_playlist_hint_title"
        app:layout_constraintEnd_toEndOf="@id/rightGuideLine"
        app:layout_constraintStart_toStartOf="@id/leftGuideLine"
        app:layout_constraintTop_toBottomOf="@id/cvPlaylist">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/namePlaylistEditText"
            style="@style/CreatePlaylistTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="54dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionPlaylistLayout"
        style="@style/CreatePlaylistTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/create_playlist_hint_description"
        app:layout_constraintBottom_toTopOf="@id/createButton"
        app:layout_constraintEnd_toEndOf="@id/rightGuideLine"
        app:layout_constraintStart_toStartOf="@id/leftGuideLine"
        app:layout_constraintTop_toBottomOf="@id/namePlaylistLayout"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionPlaylistEditText"
            style="@style/CreatePlaylistTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="54dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createButton"
        style="@style/CreatePlaylistButton"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginBottom="32dp"
        android:enabled="false"
        android:text="@string/create_playlist_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightGuideLine"
        app:layout_constraintStart_toStartOf="@id/leftGuideLine" />

    <ProgressBar
        android:id="@+id/create_playlist_progress_bar"
        android:layout_width="@dimen/search_progress_bar_size"
        android:layout_height="@dimen/search_progress_bar_size"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:indeterminateTint="@color/search_progress_bar"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>



